--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-  <title>SkillAkademy: Sockenkommando and the Bonn-Project</title>
+  <title>SkillHub</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -18,7 +18,7 @@
     <!-- Navbar und Seitensprung Start -->
 
     <nav class="navbar navbar-expand-md navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">Bonn. The city</a>
+      <a class="navbar-brand" href="index.html">SkillHub</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -27,29 +27,25 @@
         <ul class="navbar-nav">
 
           <li class="nav-item">
-            <a class="nav-link" href="gallery.html">Gallery</a>
+            <a class="nav-link" href="gallery.html">Find Skills</a>
           </li>
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="events.html" id="navbarDropdownMenuLink-Events" role="button"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Events
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">My Skills
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink-Events">
+            <!-- DropDown Menu auskommentiert -->
+            <!-- <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink-Events">
               <a class="dropdown-item" href="events.html">Upcoming Events</a>
               <a class="dropdown-item" href="events.html#art">Art & Culture</a>
               <a class="dropdown-item" href="events.html#music">Music</a>
-            </div>
+            </div> -->
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink-Sightseeing" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Sight Seeing
+              Login/Register
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink-Sightseeing">
-              <a class="dropdown-item" href="sightseeing.html">Buildings</a>
-              <a class="dropdown-item" href="sightseeing.html#Locations">Locations</a>
-            </div>
           </li>
           <li class="nav-item">
             <a href='contact.html' class="btn btn-outline-primary" role='button' aria-pressed="true">Contact
@@ -66,10 +62,10 @@
   </header>
 
   <main>
-
-    <div class="mk_seitensprung">
+	<!-- Seitensprung auskommentiert -->
+    <!-- class="mk_seitensprung">
       <a href='#' class='btn btn-outline-primary' role='button'>Seitenanfang</a>
-    </div>
+    </div> -->
 
     <!-- Navbar und Seitensprung Ende -->
 
