Progress on 'users.html'

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,259 +1,20 @@
-/* Martin's CSS Teil !!! */
-
-.image {
-  height: 600px;
-  background-size: cover;
-  background-position: 0 700px;
-}
-
-.image_2 {
-  height: 600px;
-  background-size: cover;
-  background-position: 0 1050px;
-}
-
-.image_3 {
-  height: 600px;
-  background-size: cover;
-  background-position: 0 950px;
-  /*background-position: 0 1145px; ... zeigt mehr Dach und Himmel*/
-}
-
-#carouselExampleIndicators {
-  height: 600px;
-}
-
-.container.index {
-  border: 1px solid;
-  border-color: #d3d3d3;
-
-  border-style: solid;
-  border-radius: 5px;
-  padding-top: 30px;
-  padding-right: 50px;
-  padding-bottom: 10px;
-  padding-left: 50px;
-  margin-top: 30px;
-}
-
-.button_ml {
-  display: flex;
-  justify-content: center;
-}
-
-.row_ml {
-  justify-content: space-around;
-}
-
-.carousel .carousel-item {
-    transition-duration: 0.5s;
-}
-
-
-
-/* Ende von Martin's CSS Teil !!! */
-
-
-
-
-.ueberschrift {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 5vw;
-}
-
-/* Settings für Navbar, Footer und Sprung nach oben, Asp. Michael */
-
-.navbar li {
-  list-style-type: none;
-  padding-left: 5vw;
-}
-
-.mk_seitensprung {
-  position: fixed;
-  right: 0;
-  z-index: 5;
-  background-color: white;
-}
-
-footer {
-  display: flex;
-  align-items: center;
-  color: black;
-  list-style: none;
-}
-
-footer .copyright {
-  margin-top: initial;
-  margin-bottom: initial;
-  font-size: 1rem;
-}
-
-/* Body-Settings */
-
-.mk_wayToUs {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.col.gallery {
-  margin-top: 1vh;
-}
-
-.mk_h1 {
-  display: flex;
-  justify-content: center;
-  margin-top: 6vh;
-  margin-bottom: 2vh;
-}
-
-.container .gallery {
-  display: flex;
-  justify-content: center;
-  align-content: space-between;
-}
-
-/* Bewertungsbuttons START */
-span#Bewertung {
-  line-height: 45px;
-}
-
-span.sternebewertung {
-  float: left;
-  margin-left: 22%;
-}
-
-.sb_jumbotron {
-  position: relative;
-  height: 300px;
-  overflow: hidden;
-  padding: 0;
-}
-
-span.sternebewertung:not(:checked) > input {
-  display: None;
-}
-
-span.sternebewertung:not(:checked) > label {
-  float: Right;
-  width: 1em;
-  padding: 0 0.1em;
-  overflow: Hidden;
-  white-space: Nowrap;
-  cursor: Pointer;
-  font-size: 200%;
-  line-height: 1.2;
-  color: #d0d0d0;
-  text-shadow: 1px 1px #b0b0b0, 2px 2px #606060,
-    0.1em 0.1em 0.2em rgba(0, 0, 0, 0.5);
-  transition: all 0.5s;
-}
-
-span.sternebewertung:not(:checked) > label:before {
-  content: "★ ";
-}
-
-span.sternebewertung > input:checked ~ label {
-  color: #ffd700;
-  text-shadow: 1px 1px #c06000, 2px 2px #904000,
-    0.1em 0.1em 0.2em rgba(0, 0, 0, 0.5);
-}
-
-span.sternebewertung:not(:checked) > label:hover,
-span.sternebewertung:not(:checked) > label:hover ~ label {
-  color: #ffd700;
-  text-shadow: 1px 1px #f29e02, 2px 2px #b57340,
-    0.1em 0.1em 0.2em rgba(0, 0, 0, 0.5);
-}
-
-span.sternebewertung > input:checked + label:hover,
-span.sternebewertung > input:checked + label:hover ~ label,
-span.sternebewertung > input:checked ~ label:hover,
-span.sternebewertung > input:checked ~ label:hover ~ label,
-span.sternebewertung > label:hover ~ input:checked ~ label {
-  color: #f9b500;
-  text-shadow: 1px 1px #f8ba01, 2px 2px #b57340,
-    0.1em 0.1em 0.2em rgba(0, 0, 0, 0.5);
-}
-
-input {
-  display: none;
-}
-
-/* Bewertung ENDE */
-
-/* Card settings */
-.card {
-  width: 18rem;
-  height: 25rem;
-  cursor: pointer;
-  margin: 10px;
-}
-.card.gallery {
-  text-align: center;
-  height: auto;
-}
-
-@media only screen and (max-width: 300px){
-  .card.smallcard{
-    width: auto;
-  }
-}
-
-@media only screen and (max-width: 300px){
-  .card-text{
-    font-size: 5vw;
-  }
-}
-
-.card.card_ml {
-  margin-bottom: 10px;
-  height: auto;
-}
-
-.card-img-top {
-  height: 190px;
-}
-
-/* Dies bewirkt, dass kein hover-Effekt bei der Index-Seite stattfindet; wie es gewollt ist... */
-.container:not(.index-cards) .card:hover {
-  border: 3px solid grey;
-}
-
-.mk_gmap {
-  width: 600px;
-  height: 450px;
-}
-
-.mk_gmap:hover {
-  width: 800px;
-  height: 600px;
-}
-.sb_headerimg {
+.img {
   opacity: 0.5;
   position: relative;
 }
 
-.card.smallcard.sightseeing-card {
-  width: 18rem;
-  height: 30rem;
-  cursor: pointer;
-  margin: 10px;
+.jumbotron {
+  position: relative;
+  height: 500px;
+  overflow: hidden;
+  padding: 0;
 }
 
-@media only screen and (max-width: 300px){
-  .card.smallcard{
-    width: auto !important;
-  }
-}
-
-.sb_eventbox {
+.box {
   position: absolute;
   top: 50%;
   transform: translate(0%, -50%);
-}
+} */
 
 @media only screen and (max-width: 400px) {
   .display-4 {
@@ -263,4 +24,32 @@ input {
   .lead {
     font-size: 5vw;
   }
+}
+
+.display-4, .lead {
+  padding-left: 20px;
+}
+
+/* Settings für Navbar und Footer*/
+
+.navbar li {
+  list-style-type: none;
+  padding-left: 5vw;
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  background-color:gold !important;
+  color: black;
+  list-style: none;
+}
+
+.bg-light{
+  background-color:gold!important;
+}
+
+/* Dies bewirkt, dass kein hover-Effekt bei der Index-Seite stattfindet; wie es gewollt ist... */
+.container:not(.index-cards) .card:hover {
+  border: 3px solid grey;
 }
