--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -9,7 +9,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="../static/style2.css">
+  <link rel="stylesheet" href="../static/style.css">
 </head>
 
 <body>
@@ -30,10 +30,10 @@
             <a class="nav-link" href="gallery.html">Find Skills</a>
           </li>
 
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="events.html" id="navbarDropdownMenuLink-Events" role="button"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">My Skills
+            <li class="nav-item">
+            <a class="nav-link" href="events.html">My Skills
             </a>
+
             <!-- DropDown Menu auskommentiert -->
             <!-- <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink-Events">
               <a class="dropdown-item" href="events.html">Upcoming Events</a>
@@ -41,184 +41,88 @@
               <a class="dropdown-item" href="events.html#music">Music</a>
             </div> -->
           </li>
-          <li class="nav-item dropdown">
+          <li class="nav-item">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink-Sightseeing" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Login/Register
             </a>
           </li>
-          <li class="nav-item">
+          
+          <!-- Contact Button auskommentiert -->
+          <!--<li class="nav-item">
             <a href='contact.html' class="btn btn-outline-primary" role='button' aria-pressed="true">Contact
               Us</a>
-          </li>
+          </li>-->
         </ul>
       </div>
-
-      <form class="form-inline">
+      
+      <!-- Search-Funktion auskommentiert -->
+      <!--<form class="form-inline">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-      </form>
+      </form>-->
     </nav>
   </header>
 
   <main>
-	<!-- Seitensprung auskommentiert -->
+    <!-- Seitensprung auskommentiert -->
     <!-- class="mk_seitensprung">
       <a href='#' class='btn btn-outline-primary' role='button'>Seitenanfang</a>
     </div> -->
 
     <!-- Navbar und Seitensprung Ende -->
 
-
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active" data-interval="10000">
-
-
-          <div class="image" style="background-image: url('images/dragon-rock-3388803_1920.jpg');"></div>
-          <!--<img src="images/dragon-rock-3388803_1920.jpg" class="d-block w-100" alt="Bild fehlt. -> Text noch anpassen!">-->
-        </div>
-        <div class="carousel-item" data-interval="10000">
-
-          <div class="image_2" style="background-image: url('images/rhein4.jpg');"></div>
-          <!-- <img src="images/dach-bonn.jpg" class="d-block w-100" alt="Bild 2 fehlt. -> Text noch anpassen..."> -->
-        </div>
-        <div class="carousel-item" data-interval="10000">
-
-          <div class="image_3" style="background-image: url('images/castle3.jpg');"></div>
-          <!-- <img src="images/landscape_ml.jpg" class="d-block w-100" alt="Bild 3 fehlt. -> Text noch anpassen..."> -->
+    <!--Jumbotron-->
+    <div class="jumbotron">
+        <img class="img" src="../images/climbing1.jpg" alt="alt">
+        <div class="box">
+          <h1 class="display-4" style="color:black">Climbing Skills</h1>
+          <p class="lead" style="color: black">Find people who teach you how to climb! Let's get in contact!</p>
         </div>
       </div>
-
-
-
-
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-
-
-
-
-    <div class="welcome-plus-weather">
-
-      <div class="container index">
-        <div class="row">
-          <div class="col-8">
-            <h1>Welcome in Bonn:</h1>
-            <p>We would like to show you in our internet page the beauty and the manifoldness of Bonn, the former
-              capital of Germany. It still is called "Bundesstadt Bonn",
-              because there is still the seat of government and part of the German administration in Bonn.</p>
-            <p>But Bonn is not only famous for that. You can also find the headquarter of Deutsche Post and Deutsche
-              Telekom.</p>
-            <p>For those who like culture, Bonn is also know for his famous composer and pianist, Ludwig van Beethoven,
-              who is considered to be one of the greatest composers.
-              He was born in Bonn and you can visit the house (Bethoven-Haus), which is a museum today with additional
-              cultural activities around.</p>
-          </div>
-
-
-          <div class="col-4">
-            <h3>Weather in Bonn:</h3>
-            <iframe marginheight='0' marginwidth='0' scrolling='no' width='300' height='365' name='FC3'
-              style='border:1px solid;border-radius:10px;border-color:transparent;'
-              src='https://api.wetteronline.de/wetterwidget?gid=10518&modeid=FC3&seourl=bonn&locationname=Bonn&lang=de'></iframe>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
-
-
-
-
-
-    <!-- Gallery-Overview-->
-    <section>
-      <div class="container index index-cards">
-        <h1>Bonn picture gallery</h1>
-
-
-        <div class="row row_ml">
-          <div class="col">
-            <!-- 1.Card-->
-            <div class="card smallcard card_ml" style="width: 18rem;">
-              <img class="card-img-top" src="images/ubahn.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Subway Bonn</h5>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <!-- 2.Card-->
-            <div class="card smallcard card_ml" style="width: 18rem;">
-              <img class="card-img-top" src="images/bonn.png" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">City sign Bonn</h5>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="col">
-            <!-- 3.Card-->
-            <div class="card smallcard card_ml" style="width: 18rem;">
-              <img class="card-img-top" src="images/climate.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Climate demo Bonn</h5>
-              </div>
-            </div>
-          </div>
-        </div>
-        <hr />
-        <div class="button_ml">
-          <a href="gallery.html" class="btn btn-primary">See more about gallery</a>
-        </div>
-
-      </div>
-    </section>
-
-
 
 
     <!-- Events Overview-->
     <section>
-      <div class="container index index-cards">
-        <h1>Events in and around Bonn</h1>
-
-        <div class="row">
+      <div class="container cards">
+        <div class="row no-gutters">
           <div class="col">
             <!-- 1.Card-->
-            <div class="card smallcard card_ml" style="width: 18rem;">
-              <img class="card-img-top" src="images/fireworks-1759_640.jpg" alt="Card image cap">
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="../images/alex.png" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">Upcoming Events</h5>
-                <p class="card-text">Would you like to see the Rhine shine? You will experience fantastic fireworks...
+                <h5 class="card-title">Alex</h5>
+                <p class="card-text">
+                  <table>
+                    <thead>
+                      <tr>
+                          <th>Name:</th>
+                          <th>...</th>
+                      </tr>
+                    </thead>
+                    <body>
+                    <tr th:each="user : ${users}">
+                        <td th:text="${user.name}">name</td>
+                        <td th:text="${user.city}">city</td>
+                        <td th:text="${user.age}">age</td>
+                      </tr>
+                    </body>
+                  </table>
+                                  
                 </p>
+                <a href="#" class="btn btn-primary">See profile</a>
               </div>
             </div>
           </div>
 
           <div class="col">
             <!-- 2.Card-->
-            <div class="card smallcard card_ml" style="width: 18rem;">
-              <img class="card-img-top" src="images/cinema-4609877_1920.jpg" alt="Card image cap">
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="../images/maike.png" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">Art & Culture</h5>
+                <h5 class="card-title">Maike</h5>
                 <p class="card-text">Here you can find all information about performances at the theatres Bonn...</p>
+                <a href="#" class="btn btn-primary">See profile</a>
               </div>
             </div>
           </div>
@@ -226,78 +130,22 @@
 
           <div class="col">
             <!-- 3.Card-->
-            <div class="card smallcard card_ml" style="width: 18rem;">
-              <img class="card-img-top" src="images/concert-768722_1920.jpg" alt="Card image cap">
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="../images/robert.png" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">Music</h5>
+                <h5 class="card-title">Robert</h5>
                 <p class="card-text">Here you will find an overview of all current concerts in different locations in
                   the city...</p>
+                  <a href="#" class="btn btn-primary">See profile</a>
               </div>
             </div>
           </div>
         </div>
         <hr />
-        <div class="button_ml">
-          <a href="events.html" class="btn btn-primary">See more about events</a>
-        </div>
       </div>
     </section>
 
 
-
-
-    <!-- Sightseeing Overview -->
-    <section>
-      <div class="container index index-cards">
-        <h1>Sightseeing in Bonn</h1>
-
-        <div class="row">
-          <div class="col">
-            <!-- 1.Card-->
-            <div class="card smallcard card_ml" style="width: 18rem;">
-              <img class="card-img-top" src="images/bonn-1343785_1920.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Interesting Buildings</h5>
-                <p class="card-text">You can find many intesting buildings in Bonn. Take the Post tower or the Bonn
-                  market square with the Old Town Hall or even the Bethoven Museeum.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <!-- 2.Card-->
-            <div class="card smallcard card_ml" style="width: 18rem;">
-              <img class="card-img-top" src="images/castle-437498_1920.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Castles</h5>
-                <p class="card-text">Find out more about the Castle of Drachenburg, the Poppelsdorfer Schloss, close to
-                  the city center or the castle Augustusburg in Brühl, which you should
-                  visit if you like the castle of Neuschwanstein in Bavaria.</p>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="col">
-            <!-- 3.Card-->
-            <div class="card smallcard card_ml" style="width: 18rem;">
-              <img class="card-img-top" src="images/rhine-2156833_1920.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Surroundings</h5>
-                <p class="card-text">Worth visiting is of course the Cologne Cathedral, which is a known monument with
-                  Gothic architecture, which was started to build in 1248. We recommend
-                  the Phantasialand, for families, which is a theme park between Bonn and Cologne. Don't miss the
-                  Siebengebirge and the Eifel National Park.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <hr />
-        <div class="button_ml">
-          <a href="sightseeing.html" class="btn btn-primary">See more about sighseeing</a>
-        </div>
-      </div>
-    </section>
     <hr />
 
   </main>
@@ -306,11 +154,12 @@
   <!-- Footer Start -->
 
   <footer class="navbar bottom navbar-light bg-light">
-    <a class="navbar-brand" href="index.html">Bonn. The city</a>
+    <a class="navbar-brand" href="index.html">SkillHub</a>
     <a class="navbar-brand" href="#">Impressum</a>
-    <a class="navbar-brand" href="#">Datenschutz</a>
+    <a class="navbar-brand" href="#">Privacy</a>
     <a class="navbar-brand" href="#">AGBs</a>
-    <p class="navbar-brand copyright">Copyright &copy; 2019; Sockenkomando</p>
+    <a class="navbar-brand" href="#">Contact Us</a>
+    <p class="navbar-brand copyright">Copyright &copy; 2019; SkillHub</p>
   </footer>
 
   <!-- Footer Ende -->
