Martin's push before pull

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="../static/style2.css">
+  <link rel="stylesheet" href="../static/style.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     <!-- Navbar und Seitensprung Start -->
 
     <nav class="navbar navbar-expand-md navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">Bonn. The city</a>
+      <a class="navbar-brand" href="index.html">Skill Hub</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -310,11 +310,11 @@
   <!-- Footer Start -->
 
   <footer class="navbar bottom navbar-light bg-light">
-    <a class="navbar-brand" href="index.html">Bonn. The city</a>
+    <a class="navbar-brand" href="index.html">Skill Hub</a>
     <a class="navbar-brand" href="#">Impressum</a>
     <a class="navbar-brand" href="#">Datenschutz</a>
-    <a class="navbar-brand" href="#">AGBs</a>
-    <p class="navbar-brand copyright">Copyright &copy; 2019; Sockenkomando</p>
+    <a class="navbar-brand" href="#">Contact us</a>
+    <p class="navbar-brand copyright">Copyright &copy; 2020; Skill Hub</p>
   </footer>
 
   <!-- Footer Ende -->
