--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -6,10 +6,7 @@
   <title>SkillHub</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="../static/style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
