Progress on 'users.html'

--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -13,7 +13,7 @@
 <body>
 
 	<header>
-		<!-- Navbar und Seitensprung Start -->
+		<!-- Navbar Start -->
 
 		<nav class="navbar navbar-expand-md navbar-light bg-light">
 			<a class="navbar-brand" href="index.html">SkillHub</a>
@@ -29,35 +29,16 @@
 							Skills</a></li>
 
 					<li class="nav-item"><a class="nav-link" href="events.html">My
-							Skills </a> <!-- DropDown Menu auskommentiert --> <!-- <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink-Events">
-              <a class="dropdown-item" href="events.html">Upcoming Events</a>
-              <a class="dropdown-item" href="events.html#art">Art & Culture</a>
-              <a class="dropdown-item" href="events.html#music">Music</a>
-            </div> --></li>
-					<li class="nav-item"><a class="nav-link dropdown-toggle"
-						href="#" id="navbarDropdownMenuLink-Sightseeing" role="button"
-						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Login/Register </a></li>
-
-					<!-- Contact Button auskommentiert -->
-					<!--<li class="nav-item">
-            <a href='contact.html' class="btn btn-outline-primary" role='button' aria-pressed="true">Contact
-              Us</a>
-          </li>-->
+							Skills </a> </li>
+					<li class="nav-item"><a class="nav-link" href="#">
+							Log Out </a></li>
 				</ul>
 			</div>
-
-			<!-- Search-Funktion auskommentiert -->
-			<!--<form class="form-inline">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-      </form>-->
 		</nav>
 	</header>
 
-	<main> <!-- Seitensprung auskommentiert --> <!-- class="mk_seitensprung">
-      <a href='#' class='btn btn-outline-primary' role='button'>Seitenanfang</a>
-    </div> --> <!-- Navbar und Seitensprung Ende --> <!--Jumbotron-->
+	<main> 
+    <!--Jumbotron-->
 	<div class="jumbotron">
 		<img class="img" src="../images/climbing1.jpg" alt="alt">
 		<div class="box">
