Fix 'User' method 'getUserName()'

--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -55,50 +55,18 @@
 			<div class="row no-gutters">
 				<div class="col">
 					<!-- 1.Card-->
-					<div class="card" style="width: 18rem;">
+					<div th:each="user : ${users}" class="card" style="width: 18rem;">
 						<img class="card-img-top" src="../images/alex.png"
 							alt="Card image cap">
 						<div class="card-body">
 							<h5 class="card-title">Alex</h5>
 							<p class="card-text">
-								<body>
-									<ul th:each="user : ${users}">
+									<ul>
 										<li th:text="|Name: ${user.userName}|">$userName</li>
-										<li th:text="|Age: ${user.age}|">$age</li>
 										<li th:text="|City: ${user.city}|">$city</li>
 									</ul>
 									<a href="/">Go back</a>
-								</body>
 							</p>
-							<a href="#" class="btn btn-primary">See profile</a>
-						</div>
-					</div>
-				</div>
-
-				<div class="col">
-					<!-- 2.Card-->
-					<div class="card" style="width: 18rem;">
-						<img class="card-img-top" src="../images/maike.png"
-							alt="Card image cap">
-						<div class="card-body">
-							<h5 class="card-title">Maike</h5>
-							<p class="card-text">Here you can find all information about
-								performances at the theatres Bonn...</p>
-							<a href="#" class="btn btn-primary">See profile</a>
-						</div>
-					</div>
-				</div>
-
-
-				<div class="col">
-					<!-- 3.Card-->
-					<div class="card" style="width: 18rem;">
-						<img class="card-img-top" src="../images/robert.png"
-							alt="Card image cap">
-						<div class="card-body">
-							<h5 class="card-title">Robert</h5>
-							<p class="card-text">Here you will find an overview of all
-								current concerts in different locations in the city...</p>
 							<a href="#" class="btn btn-primary">See profile</a>
 						</div>
 					</div>
