--- a/src/main/resources/templates/skills.html
+++ b/src/main/resources/templates/skills.html
@@ -23,7 +23,7 @@
 			<div class="collapse navbar-collapse" id="navbarNavDropdown">
 				<ul class="navbar-nav">
 
-					<li class="nav-item"><a class="nav-link" href="gallery.html">Find
+					<li class="nav-item active"><a class="nav-link" href="gallery.html">Find
 							Skills</a></li>
 
 					<li class="nav-item"><a class="nav-link" href="events.html">My
@@ -38,11 +38,10 @@
 	<main>
 		<!--Jumbotron-->
 		<div class="jumbotron">
-			<img class="img" src="../images/climbing1.jpg" alt="alt">
+			<img class="img" src="../images/milkyway.jpg" alt="alt">
 			<div class="box">
-				<h1 class="display-4" style="color: black">Climbing Skills</h1>
-				<p class="lead" style="color: black">Find people who teach you
-					how to climb! Let's get in contact!</p>
+				<h1 class="display-4" style="color: black">Find the skills your are searching for!</h1>
+				<p class="lead" style="color: black">What are you looking for?</p>
 			</div>
 		</div>
 	</div>
@@ -58,8 +57,9 @@
 						<!--src="../images/th:text="${user.imageURL}"-->
 						<div class="card-body">
 							<h5 th:text="${skill.name}" class="card-title">Name</h5>
-							<p class="card-text">Test</p>
-							<a href="#" class="btn btn-primary">Find people with this skill</a>
+							<!--  <p class="card-text">Test</p> -->
+							<a th:href="@{${'users/search?skillName=' + skill.name}}" class="btn btn-primary">Find people with this skill</a>
+							<!-- <a href="users/search?skillName=climbing" class="btn btn-primary">Find people with this skill</a> -->
 						</div>
 					</div>
 				</div>
