Martin: 2nd: User, Controller & Repository

--- a/src/main/resources/templates/create_user.html
+++ b/src/main/resources/templates/create_user.html
@@ -84,7 +84,7 @@
   
   <!-- birthday --> 
     <label for="user-birthday">Birthday:</label>
-    <input id="user-birthday" name="birthday" placeholder="1980-07-31" required th:field="*{birthday}" type="date">
+    <input id="user-birthday" name="dateOfBirth" placeholder="1980-07-31" required th:field="*{dateOfBirth}" type="date">
     <br><br>
   
   
