--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -38,7 +38,7 @@
 	<main>
 		<!--Jumbotron-->
 		<div class="jumbotron">
-			<img class="img" src="../images/climbing1.jpg" alt="alt">
+			<img class="img" src="../images/milkyway.jpg"  alt="alt">
 			<div class="box">
 				<h1 class="display-4" style="color: black">Climbing Skills</h1>
 				<p class="lead" style="color: black">Find people who teach you
