--- a/src/main/resources/templates/create_user.html
+++ b/src/main/resources/templates/create_user.html
@@ -3,10 +3,11 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
 
 <head>
-	<title>SkillHub</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/style.css">
+<title>SkillHub</title>
+<meta charset="utf-8">
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
@@ -16,8 +17,9 @@
 
 		<nav class="navbar navbar-expand-md navbar-light bg-light">
 			<a class="navbar-brand" href="index.html">SkillHub</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-				aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler" type="button" data-toggle="collapse"
+				data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
+				aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -27,137 +29,119 @@
 							Skills</a></li>
 
 					<li class="nav-item"><a class="nav-link" href="events.html">My
-							Skills </a> </li>
-					<li class="nav-item"><a class="nav-link" href="#">
-							Log Out </a></li>
+							Skills </a></li>
+					<li class="nav-item"><a class="nav-link" href="#"> Log Out
+					</a></li>
 				</ul>
 			</div>
 		</nav>
 	</header>
 
 	<main>
-    
-    <head>
-      <title>Create new user</title>
-      <h1>Create new user:</h1>
-   </head>
-    
-    
-    <body>
-<h3 th:text="${wizard.id} ? 'Edit Wizard' : 'Create Wizard'">User</h3>
-      
-<form method="post" th:action="@{/wizard}" th:object="${wizard}">
-    <input name="id" th:field="*{id}" type="hidden">
-  
-  
-  <!-- userName -->
-      <label for="userName">User name:</label>
-    <input id="userName" name="userName" placeholder="Pottylein" required th:field="*{userName}" type="text">
-    <br><br>
-  
-  
-  <!-- last name --> 
-      <label for="user-last-name">Last name:</label>
-    <input id="user-last-name" name="lastName" placeholder="Potter" required th:field="*{lastName}" type="text">
-    <br><br>
-  
-  
-  <!-- first name --> 
-      <label for="user-first-name">First name:</label>
-    <input id="user-first-name" name="firstName" placeholder="Harry" required th:field="*{firstName}" type="text">
-    <br><br>
-  
-  
-  <!-- zip code --> 
-      <label for="zip-code">Zip Code:</label>
-    <input id="zip-code" name="zipCode" placeholder="12345" required th:field="*{zipCode}" type="number">
-    <br><br>
-  
-  
-  <!-- city --> 
-  
-    <label for="city">City:</label>
-    <input id="city" name="city" placeholder="Bonn" th:field="*{city}" type="text">
-    <br><br>
-  
-  
-  
-  <!-- birthday --> 
-    <label for="user-birthday">Birthday:</label>
-    <input id="user-birthday" name="dateOfBirth" placeholder="1980-07-31" required th:field="*{dateOfBirth}" type="date">
-    <br><br>
-  
-  
-  
-  <!-- email --> 
-      <label for="email">Email:</label>
-    <input id="email" name="email" placeholder="Potter@hogwards.com" required th:field="*{email}" type="text">
-    <br><br>
-  
-  
-  <!-- description --> 
-      <label for="user-description">Description:</label>
-    <textarea id="user-description" name="description" th:field="*{description}"></textarea>
-    <br><br>
-  
-  
-  
-  <!-- imageURL --> 
-      <label for="imageURL">Image URL (placeholder):</label>
-    <input id="imageURL" name="imageURL" placeholder="Place holder..." required th:field="*{imageURL}" type="text">
-    <br><br>
-  
-  
-  
-  
 
-  
+	<head>
+<title>Create new user</title>
+<h1>Create new user:</h1>
+	</head>
 
-  
-  
-  
-  
-  <!--
-  
+	<body>
+		<h3 th:text="${user.id} ? 'Edit User' : 'Create User'">User2</h3>
 
-  
-    <label for="wizard-is-muggle">Is Muggle ?</label>
-    <input id="wizard-is-muggle" name="muggle" th:field="*{muggle}" type="checkbox">
-    <br><br>
-  
-  
-  -->
-  
-    <input type="submit" value="Create">
-</form>
-<br>
-<a href="/wizards">Return to the list</a>
-</body>
+		<form method="post" th:action="@{users/create}" th:object="${user}">
+			<input name="id" th:field="*{id}" type="hidden">
+
+
+			<!-- userName -->
+			<label for="userName">User name:</label> <input id="userName"
+				name="userName" placeholder="Pottylein" required
+				th:field="*{userName}" type="text"> <br> <br>
+
+
+			<!-- last name -->
+			<label for="user-last-name">Last name:</label> <input
+				id="user-last-name" name="lastName" placeholder="Potter" required
+				th:field="*{lastName}" type="text"> <br> <br>
+
+
+			<!-- first name -->
+			<label for="user-first-name">First name:</label> <input
+				id="user-first-name" name="firstName" placeholder="Harry" required
+				th:field="*{firstName}" type="text"> <br> <br>
+
+
+			<!-- zip code -->
+			<label for="zip-code">Zip Code:</label> <input id="zip-code"
+				name="zipCode" placeholder="12345" required th:field="*{zipCode}"
+				type="number"> <br> <br>
+
+
+			<!-- city -->
+
+			<label for="city">City:</label> <input id="city" name="city"
+				placeholder="Bonn" th:field="*{city}" type="text"> <br>
+			<br>
+
+
+
+
+			<!-- birthday -->
+			<label for="dateOfBirth">Birthday:</label> <input id="dateOfBirth"
+				name="dateOfBirth" placeholder="1980-07-31" required
+				th:field="*{dateOfBirth}" type="date"> <br>
+			<br>
+
+
+
+			<!-- email -->
+			<label for="email">Email:</label> <input id="email" name="email"
+				placeholder="Potter@hogwards.com" required th:field="*{email}"
+				type="text"> <br> <br>
+
+
+			<!-- description -->
+			<label for="user-description">Description:</label>
+			<textarea id="user-description" name="description"
+				th:field="*{description}"></textarea>
+			<br> <br>
+
+
+
+			<!-- imageURL -->
+			<label for="imageURL">Image URL (placeholder):</label> <input
+				id="imageURL" name="imageURL" placeholder="Place holder..." required
+				th:field="*{imageURL}" type="text"> <br> <br>
+
+
+			<!--
+			
+			<label for="wizard-is-muggle">Is Muggle ?</label>
+			<input id="wizard-is-muggle" name="muggle" th:field="*{muggle}" type="checkbox">
+			<br><br>
+			-->
+
+			<input type="submit" value="Create">
+		</form>
+		<br>
 		
-    
-    
-    
-    
-    
-    
-    <!--
+		<a href="/users/userslist">Return to the list</a>
+	</body>
 
 
 
--->
-    
- 
 
 
-	</main>
+
+
+	--> </main>
 
 
 	<!-- Footer Start -->
 
 	<footer class="navbar bottom navbar-light bg-light">
-		<a class="navbar-brand" href="index.html">SkillHub</a> <a class="navbar-brand" href="#">Impressum</a> <a
-			class="navbar-brand" href="#">Privacy</a> <a class="navbar-brand" href="#">AGBs</a> <a class="navbar-brand"
-			href="#">Contact Us</a>
+		<a class="navbar-brand" href="index.html">SkillHub</a> <a
+			class="navbar-brand" href="#">Impressum</a> <a class="navbar-brand"
+			href="#">Privacy</a> <a class="navbar-brand" href="#">AGBs</a> <a
+			class="navbar-brand" href="#">Contact Us</a>
 		<p class="navbar-brand copyright">Copyright &copy; 2019; SkillHub</p>
 	</footer>
 
