--- a/src/main/resources/templates/skills.html
+++ b/src/main/resources/templates/skills.html
@@ -78,7 +78,7 @@
 		<a class="navbar-brand" href="index.html">SkillHub</a> <a class="navbar-brand" href="#">Impressum</a> <a
 			class="navbar-brand" href="#">Privacy</a> <a class="navbar-brand" href="#">AGBs</a> <a class="navbar-brand"
 			href="#">Contact Us</a>
-		<p class="navbar-brand copyright">Copyright &copy; 2019; SkillHub</p>
+		<p class="navbar-brand copyright">Copyright &copy; 2020</p>
 	</footer>
 
 	<!-- Footer Ende -->
