index.html --> draft version is working with the links

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,24 +40,37 @@
 	<main>
 
 	<head>
-<title>Create new user</title>
-<h1>Create new user:</h1>
+<title>Index: SkillHub</title>
+<h1>Index: SkillHub (draft version):</h1>
 	</head>
 
 	<body>
-		
+
 		<br>
-		
-		<a href="/users/userslist">Return to the list</a>
+
+		<a href="/users/userslist">Return to the list (For Martin: delete later)</a>
+		<br>
+		<br>
+		<a href="/users/create">Create User</a>
+		<br>
+		<br>
+		<a href="/skills">Find Skills</a>
+		<br>
+		<br>
+		<a href="/">My Skills</a>
+		<br>
+		<br>
+		<a href="/">Log Out</a>
+		<br>
+		<br>
+		<a href="/">To Index (delete later; test jump)</a>
+
+
+
 	</body>
 
 
-
-
-
-
-
-	--> </main>
+	</main>
 
 
 	<!-- Footer Start -->
