--- a/src/main/resources/templates/create_user.html
+++ b/src/main/resources/templates/create_user.html
@@ -124,6 +124,11 @@
 		<br>
 		
 		<a href="/users/userslist">Return to the list</a>
+		<br>
+		<br>
+		<a href="/">Return to the index</a>
+		<br>
+		<br>
 	</body>
 
 
@@ -132,7 +137,7 @@
 
 
 
-	--> </main>
+	</main>
 
 
 	<!-- Footer Start -->
