Danke Michael: Date is working !

--- a/src/main/resources/templates/create_user.html
+++ b/src/main/resources/templates/create_user.html
@@ -84,12 +84,12 @@
 
 
 
-			<!-- birthday 
+			<!-- birthday -->
 			<label for="dateOfBirth">Birthday:</label> <input id="dateOfBirth"
 				name="dateOfBirth" placeholder="1980-07-31" required
 				th:field="*{dateOfBirth}" type="date"> <br>
 			<br>
--->
+
 
 
 			<!-- email -->
