create_user and UserController - still under construction

--- a/src/main/resources/templates/create_user.html
+++ b/src/main/resources/templates/create_user.html
@@ -41,7 +41,7 @@
 
 	<head>
 <title>Create new user</title>
-<h1>Create new user:</h1>
+<h1></h1>
 	</head>
 
 	<body>
@@ -119,7 +119,16 @@
 			<br><br>
 			-->
 
-			<input type="submit" value="Create">
+<!-- 
+<h3 th:text="${user.id} ? 'Edit' : 'Create'">Submit</h3>
+
+ -->
+
+
+			
+			<input type="submit" value="Submit">
+			
+			<!-- <input type="submit" value="Submit">  -->
 		</form>
 		<br>
 		
