--- a/src/main/resources/templates/create_user.html
+++ b/src/main/resources/templates/create_user.html
@@ -12,30 +12,7 @@
 
 <body>
 
-	<header>
-		<!-- Navbar Start -->
-
-		<nav class="navbar navbar-expand-md navbar-light bg-light">
-			<a class="navbar-brand" href="index.html">SkillHub</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse"
-				data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
-				aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNavDropdown">
-				<ul class="navbar-nav">
-
-					<li class="nav-item"><a class="nav-link" href="gallery.html">Find
-							Skills</a></li>
-
-					<li class="nav-item"><a class="nav-link" href="events.html">My
-							Skills </a></li>
-					<li class="nav-item"><a class="nav-link" href="#"> Log Out
-					</a></li>
-				</ul>
-			</div>
-		</nav>
-	</header>
+	<header th:replace="fragments.html :: top">Here goes the header</header>
 
 	<main>
 
@@ -87,8 +64,7 @@
 			<!-- birthday -->
 			<label for="dateOfBirth">Birthday:</label> <input id="dateOfBirth"
 				name="dateOfBirth" placeholder="1980-07-31" required
-				th:field="*{dateOfBirth}" type="date"> <br>
-			<br>
+				th:field="*{dateOfBirth}" type="date"> <br> <br>
 
 
 
@@ -122,7 +98,7 @@
 			<input type="submit" value="Create">
 		</form>
 		<br>
-		
+
 		<a href="/users/userslist">Return to the list</a>
 		<br>
 		<br>
@@ -140,17 +116,7 @@
 	</main>
 
 
-	<!-- Footer Start -->
-
-	<footer class="navbar bottom navbar-light bg-light">
-		<a class="navbar-brand" href="index.html">SkillHub</a> <a
-			class="navbar-brand" href="#">Impressum</a> <a class="navbar-brand"
-			href="#">Privacy</a> <a class="navbar-brand" href="#">AGBs</a> <a
-			class="navbar-brand" href="#">Contact Us</a>
-		<p class="navbar-brand copyright">Copyright &copy; 2020</p>
-	</footer>
-
-	<!-- Footer Ende -->
+	<footer th:replace="fragments.html :: bottom">Here goes the footer</footer>
 
 
 </body>
