--- a/src/main/resources/templates/see_created_users.html
+++ b/src/main/resources/templates/see_created_users.html
@@ -1,9 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
+
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8">
-<title>Users List</title>
+	<title>Users List</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/style.css">
 </head>
+
+<header th:replace="fragments.html :: top">Here goes the header</header>
+
 <style>
 table {
 	border-collapse: collapse;
@@ -53,19 +60,22 @@ th, td {
 				<td th:text="${user.userName}">User name</td>
 				<td th:text="${user.firstName}">First name</td>
 				<td th:text="${user.lastName}">Last name</td>
-		 		<td th:text="${user.dateOfBirth}">Birthday</td>  
+				<td th:text="${user.dateOfBirth}">Birthday</td>
 				<td th:text="${user.zipCode}">Zip Code</td>
 				<td th:text="${user.city}">City</td>
 				<td th:text="${user.email}">Email</td>
 				<td th:text="${user.description}">Description</td>
 				<td th:text="${user.imageURL}">ImageURL</td>
 				<td><a th:href="@{/create(id=${user.id})}">Edit</a></td>
-			 	<td><a th:href="@{/create/delete(id=${user.id})}">Delete user</a></td>
+				<td><a th:href="@{/create/delete(id=${user.id})}">Delete
+						user</a></td>
 			</tr>
 
 		</tbody>
 	</table>
 	<br>
 	<a href="/">Return to the index</a>
+	
+	<footer th:replace="fragments.html :: bottom">Here goes the footer</footer>
 </body>
 </html>
