--- a/src/main/resources/templates/skills.html
+++ b/src/main/resources/templates/skills.html
@@ -11,29 +11,7 @@
 
 <body>
 
-	<header>
-		<!-- Navbar Start -->
-
-		<nav class="navbar navbar-expand-md navbar-light bg-light">
-			<a class="navbar-brand" href="index.html">SkillHub</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-				aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNavDropdown">
-				<ul class="navbar-nav">
-
-					<li class="nav-item active"><a class="nav-link" href="gallery.html">Find
-							Skills</a></li>
-
-					<li class="nav-item"><a class="nav-link" href="events.html">My
-							Skills </a> </li>
-					<li class="nav-item"><a class="nav-link" href="#">
-							Log Out </a></li>
-				</ul>
-			</div>
-		</nav>
-	</header>
+<header th:replace="fragments.html :: top">Here goes the header</header>
 
 	<main>
 		<!--Jumbotron-->
@@ -72,16 +50,7 @@
 	</main>
 
 
-	<!-- Footer Start -->
-
-	<footer class="navbar bottom navbar-light bg-light">
-		<a class="navbar-brand" href="index.html">SkillHub</a> <a class="navbar-brand" href="#">Impressum</a> <a
-			class="navbar-brand" href="#">Privacy</a> <a class="navbar-brand" href="#">AGBs</a> <a class="navbar-brand"
-			href="#">Contact Us</a>
-		<p class="navbar-brand copyright">Copyright &copy; 2020</p>
-	</footer>
-
-	<!-- Footer Ende -->
+	<footer th:replace="fragments.html :: bottom">Here goes the footer</footer>
 
 
 </body>
