--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -48,7 +48,7 @@
 
 		<br>
 
-		<a href="/users/userslist">Return to the list (For Martin: delete later)</a>
+		<a href="/users">Return to the list (For Martin: delete later)</a>
 		<br>
 		<br>
 		<a href="/users/create">Create User</a>
