index: current link fits now.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
 		<a href="/users">Return to the list (For Martin: delete later)</a>
 		<br>
 		<br>
-		<a href="/users/create">Create User</a>
+		<a href="/user/new">Create User</a>
 		<br>
 		<br>
 		<a href="/skills">Find Skills</a>
